<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="eEncoderReferenceMode" Id="{83a29225-b525-0df4-3225-e026452905fc}">
    <Declaration><![CDATA[TYPE eEncoderReferenceMode : 
(
	ENCODERREFERENCEMODE_DEFAULT			:=	0,
	ENCODERREFERENCEMODE_PLCCAM				:=	1,
	ENCODERREFERENCEMODE_HARDWARESYNC		:=	2,
	ENCODERREFERENCEMODE_HARDWARELATCHPOS	:=	3,
	ENCODERREFERENCEMODE_HARDWARELATCHNEG	:=	4,
	ENCODERREFERENCEMODE_SOFTWARESYNC		:=	5,
	ENCODERREFERENCEMODE_SOFTDRIVELATCHPOS	:=	6,
	ENCODERREFERENCEMODE_SOFTDRIVELATCHNEG	:=	7
)	UDINT; 
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>